--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.7",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-qrcode-logo": "^2.7.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
