:sparkles: アプリをPWAにする設定が完了
フォント周りを直接CDNで読み込むように書き換える作業が残ってる

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,6 @@
     "isolatedModules": true,
     "noEmit": true
   },
-  "include": ["src"],
+  "include": ["src", "node_modules/vite-plugin-pwa/client.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
