--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "localforage": "^1.10.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-qrcode-logo": "^2.7.0"
+    "react-qrcode-logo": "^2.7.0",
+    "vite-plugin-pwa": "^0.12.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
