--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sample-todo-pwa-app",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://kitamuradev.github.io/sample-todo-pwa-app/",
   "license": "MIT",
   "scripts": {
     "dev": "vite",
